bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction2 (Optimized, PlainTerm).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: site_label, wtur_label, year, month, day, hour, minute_10, ENC_PT(<uuid>) AS avg_val
  Aggregate: groupBy=[[site_label AS site_label, wtur_label AS wtur_label, ENC_PT(year) AS year, ENC_PT(month) AS month, ENC_PT(day) AS day, ENC_PT(hour) AS hour, ENC_PT(minute_10) AS minute_10]], aggr=[[AVG(ENC_TF(val)) AS <uuid>]]
    Projection: site_label, wtur_label, val, minute_10, hour, day, MONTH(__common_expr_1) AS month, YEAR(__common_expr_1) AS year
      Projection: ENC_TF(t) AS __common_expr_1, site_label, wtur_label, val, MUL(Union 4:4:10, FLOOR(DIV(MINUTES(__common_expr_3), Union 4:2:Some(<uuid>),36,18))) AS minute_10, HOURS(__common_expr_3) AS hour, DAY(__common_expr_3) AS day
        Projection: ENC_TF(t) AS __common_expr_3, site_label, wtur_label, val, t
          BasicGraphPattern: projection=[site_label, wtur_label, val, t], filters=[EBV(EQ(ENC_TF(site_label), Union 2:{value:Wind Mountain,language:})), EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A1,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A2,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A3,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A4,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A5,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A6,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A7,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A8,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A9,language:})) OR EBV(EQ(ENC_TF(wtur_label), Union 2:{value:A10,language:})), EBV(GEQ(ENC_TF(t), Union 5:{date_time_type:0,value:63797446013.000000000000000000,offset:})), EBV(LEQ(ENC_TF(t), Union 5:{date_time_type:0,value:63797492813.000000000000000000,offset:}))]
            QuadPattern: triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>]
            QuadPattern: triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label]
            QuadPattern: triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp]
            QuadPattern: triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label]
            QuadPattern: triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp]
            QuadPattern: triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp]
            QuadPattern: triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>]
            QuadPattern: triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp]
            QuadPattern: triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>]
            QuadPattern: triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp]
            QuadPattern: triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp]
            QuadPattern: triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>]
            QuadPattern: triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts]
            QuadPattern: triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"]
            QuadPattern: triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp]
            QuadPattern: triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val]
            QuadPattern: triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t]
